--- a/style.css
+++ b/style.css
@@ -148,21 +148,23 @@ p:last-child{
 
 /* ---offcanvas-css--- */
 .offcanvas-open {
-  font-size: 22px;
+  font-size: 25px;
   transition: 0.3s;
 }
 .offcanvas-open:hover {
   color: #97A3AE;
 }
 .offcanvas-close {
-  color: var(--theme__color1);
+  color: #fff;
   position: absolute;
   transition: 0.3s;
-  right: 25px;
-  top: 25px;
+  right: 15px;
+  top: 15px;
+  font-size: 22px;
+  line-height: 1;
 }
 .offcanvas-close:hover {
-  color: #97A3AE;
+  color: var(--theme__color1);
 }
 .offcanvas-menu {
   position: fixed;
@@ -182,7 +184,7 @@ p:last-child{
   min-width: 200px;
   z-index: 5;
   position: relative;
-  background: #d5dce2;
+  background: var(--theme__color3);
   height: 100%;
   padding: 50px 20px 40px;
   overflow: auto;
@@ -192,19 +194,16 @@ p:last-child{
 .offcanvas-menu .offmenu :-webkit-scrollbar {
   display: none;
 }
-.offcanvas-menu ul li a {
+.mobile-menu li a {
   display: block;
   text-align: center;
   font-size: 16px;
-  color: var(--theme__color1);
+  color: #fff;
   padding: 10px;
+  transition: 0.3s;
 }
-.dropdown-menu-custom ul {
-  background: #fff;
-  padding: 20px 0;
-}
-.dropdown-menu-custom ul li a {
-  color: #97A3AE;
+.mobile-menu li a:hover {
+  color: var(--theme__color1);
 }
 .offcanvas-overlay {
   position: fixed;
@@ -340,7 +339,7 @@ p:last-child{
   font-size: 15px;
   margin-bottom: 2px;
   color: var(--theme__color1);
-  font-weight: 500;
+  font-weight: 700;
 }
 .sec-title {
   margin-bottom: 34px;
@@ -464,6 +463,7 @@ p:last-child{
 .passion-r3 {
   margin-top: 110px;
   --bs-gutter-x: 34px;
+  --bs-gutter-y: var(--bs-gutter-x)
 }
 .passion-r3__image {
   width: 100%;
@@ -601,16 +601,15 @@ p:last-child{
   justify-content: center;
 }
 .gallery-nav ul li {
-
-}
-.gallery-nav ul li a {
   font-size: 25.5px;
   letter-spacing: 2px;
   font-weight: 400;
   text-transform: uppercase;
   border-bottom: 3px solid transparent;
+  cursor: pointer;
+  transition: 0.3s;
 }
-.gallery-nav ul li a.active {
+.gallery-nav ul li.active {
   border-bottom-color: var(--theme__color1);
 }
 
@@ -620,8 +619,14 @@ p:last-child{
 }
 .gallery-item {
   width: 100%;
+  padding-top: 100%;
+  position: relative;
 }
 .gallery-item .img {
+  width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
 }
 /* ---gallery-section---end */
