--- a/style.css
+++ b/style.css
@@ -621,6 +621,7 @@ p:last-child{
   width: 100%;
   padding-top: 100%;
   position: relative;
+  overflow: hidden;
 }
 .gallery-item .img {
   width: 100%;
@@ -628,6 +629,10 @@ p:last-child{
   top: 0;
   left: 0;
   width: 100%;
+  transition: 500ms cubic-bezier(0.375, 0.880, 0.505, 0.910);
+}
+.gallery-item:hover .img {
+  transform: scale(1.1);
 }
 /* ---gallery-section---end */
 
